--- a/holo-bfd/Cargo.toml
+++ b/holo-bfd/Cargo.toml
@@ -38,6 +38,8 @@ yang3 = { workspace = true, features = ["bundled"] }
 holo-bfd = { path = ".", features = ["testing"] }
 holo-protocol = { path = "../holo-protocol", features = ["testing"] }
 holo-utils = { path = "../holo-utils", features = ["testing"] }
+yaml-rust2.workspace = true
+hex = "0.4.3"
 
 [lints]
 workspace = true
